--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="backdrop-overlay"></div>
+    <div id="modal-overlay"></div>
+    <div id="backdrop-overlay-secondary"></div>
+    <div id="modal-overlay-secondary"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
